--- a/src/content/blog/002_DOI.md
+++ b/src/content/blog/002_DOI.md
@@ -3,13 +3,13 @@ slug: doi-v-amcr-digitalni-rodne-cislo
 title: "Identifikátor DOI v AMČR: digitální rodné číslo pro vaše data"
 excerpt: "Co je DOI, jak funguje a proč je důležitý pro vaše archeologická data v AMČR?"
 date: "2025-11-30"
-category: "Technologie"
+# category: "Technologie"
 published: true
 locale: "cs"
 readingTime: "4 minuty"
 author: "Tomáš Pavloň"
 authorRole: "Datový kurátor AMČR"
-authorImage: "/images/people/ais-staff.webp"
+authorImage: "/images/blog/Pavlon_Tomas.jpg"
 image: "/images/blog/002/002_000_nahled.webp"
 ---
 
@@ -71,5 +71,6 @@ Když někdo použije citaci s DOI/IGSN ve vědeckém článku, publikaci nebo j
 - Video o DOI od Archaeology Data Service: [An Introduction to Digital Object Identifiers - YouTube](https://www.youtube.com/watch?v=48Rth4IFGY4)
 - Video od EOSC-CZ/NTK k národní podpoře DOI: [Digitální identifikátor objektů DOI a jeho národní podpora v ČR - YouTube](https://www.youtube.com/watch?v=YzES8RJMNhQ)
 - Prezentace D. Nováka o implementaci PIDů v AMČR: [Persistentní identifikátory a jejich využití v AMČR](https://doi.org/10.5281/zenodo.15600346)
-- Článek B. Marwicka a S. E. P. Birch o správné citační praxi: [A Standard for the Scholarly Citation of Archaeological Data](https://doi.org/10.1017/aap.2018.3)
+- Článek B. Marwicka a S. E. P. Birch o správné citační praxi pro datasety v archeologii: [A Standard for the Scholarly Citation of Archaeological Data](https://doi.org/10.1017/aap.2018.3)
 - Vyzkoušejte si práci s DOI v DataCite Commons: [https://commons.datacite.org/](https://commons.datacite.org/)
+
