Update blog articles and improve image assets
- Changed categories for blog articles to "Novinka" and "Událost".
- Updated author images for blog posts with new files.
- Enhanced the content in the English messages JSON for better clarity.
- Adjusted layout styles in the About component for improved presentation.
- Updated footer logo dimensions for better visual consistency.

--- a/src/content/blog/002_DOI.md
+++ b/src/content/blog/002_DOI.md
@@ -3,13 +3,13 @@ slug: doi-v-amcr-digitalni-rodne-cislo
 title: "Identifikátor DOI v AMČR: digitální rodné číslo pro vaše data"
 excerpt: "Co je DOI, jak funguje a proč je důležitý pro vaše archeologická data v AMČR?"
 date: "2025-11-30"
-# category: "Technologie"
+category: "Novinka"
 published: true
 locale: "cs"
 readingTime: "4 minuty"
 author: "Tomáš Pavloň"
 authorRole: "Datový kurátor AMČR"
-authorImage: "/images/blog/Pavlon_Tomas.jpg"
+authorImage: "/images/blog/author/pavlon.jpg"
 image: "/images/blog/002/002_000_nahled.webp"
 ---
 
